@@ -2467,8 +2467,8 @@ long    ellQ_get_CM(GEN e);
 int     ell_is_integral(GEN E);
 GEN     ellbasechar(GEN E);
 GEN     akell(GEN e, GEN n);
-GEN     anell(GEN e, long n);
-GEN     anellsmall(GEN e, long n);
+GEN     ellan(GEN e, long n);
+GEN     ellanQ_zv(GEN e, long n);
 GEN     bilhell(GEN e, GEN z1, GEN z2, long prec);
 void    checkell(GEN e);
 void    checkell_Fq(GEN e);
