@@ -13,6 +13,8 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA. */
 
 /* For compatibility with older PARI versions */
 /*functions renamed*/
+#define anell ellan
+#define anellsmall ellanQ_zv
 #define leading_term leading_coeff
 #define constant_term leading_coeff
 #define concat gconcat
