@@ -15,4 +15,6 @@
 ([3]), [5, [4, 0, [1, 0, 0, 0]]], [0, 0, 0, 0]]
 6
 6
-Total time spent: 184
+[1, 0, 0, -2, -1, 0, 0, 0, -2, 0, 0, 0, -3, 0, 0, 4, 6, 0, 0, 2]
+[1, 0, 0, -2, -1, 0, 0, 0, -2, 0, 0, 0, -3, 0, 0, 4, 6, 0, 0, 2]
+Total time spent: 84
