@@ -464,6 +464,7 @@ BA 177- libpari support for low-res plot()
    178- GP function serprec
    179- ellap(E, p) for E/K number field, and p maximal ideal
    180- [libpari] function sertoser
+   181- ellan(E, n) for E/K number field
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
@@ -600,6 +601,7 @@ BA 75- rename FlxqX_pow to FlxqX_powu
        always refers to floating point precision. Before the change:
        precision([O(2),O(3),O(x)], 10) -> [O(2^10),O(3^10),O(x^10)]
    80- infinite slopes of newtonpoly replaced by "+oo" (instead of 2^63-1)
+   81- rename anell -> ellan, anellsmall -> ellanQ_zv
 
 Removed
    1- deprecated functions nfbasis0, nfdisc0, factorpadic0
